Fixed wrong size of video

--- a/src/App/Lisa.Zuma.BlueJay.IOS.Views/HTML/stylesheets/timeline.css
+++ b/src/App/Lisa.Zuma.BlueJay.IOS.Views/HTML/stylesheets/timeline.css
@@ -184,6 +184,7 @@ width: 43px;
   background-color: black;
   width: 419px;
   height: 240px;
+  padding:0;
 }
 
 .videoHolder .play{
